--- a/Lista69B/src/app/app.component.html
+++ b/Lista69B/src/app/app.component.html
@@ -1,8 +1,19 @@
+
 <div  class="flex bg-blue-100 overflow-y-scroll w-screen h-screen antialiased text-slate-300 selection:bg-blue-600 selection:text-white">
-   <div class="flex  flex-col sm:flex-row sm:relative   w-screen">
+   <div class="flex  flex-col sm:flex-row sm:relative w-screen ">
       <app-menu></app-menu>
-      <div class="text-black px-2 w-full">
+      <div class=" text-black px-2 w-full  ">
          <router-outlet></router-outlet>
       </div>
    </div>
 </div>
+
+<div *ngIf="isLoading" class="w-full h-full fixed top-0 left-0 bg-white opacity-75 z-50">
+   <div class="flex justify-center items-center mt-[50vh]">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-32 h-32 animate-spin text-blue-800">
+         <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
+       </svg>
+       
+     
+   </div>
+ </div>
