--- a/Lista69B/src/app/watchList/watch-add/watch-add.component.html
+++ b/Lista69B/src/app/watchList/watch-add/watch-add.component.html
@@ -8,14 +8,18 @@
     <label for="rfc">Nombre Completo o Razon Social</label>
     <input id="rfc" class="px-1 outline-none shadow-md focus:outline-3 focus:outline-blue-800 hover:ring-2 hover:ring-blue-500" formControlName="RazonSocial" type="text">
 </div>
-<p>{{this.form.invalid|json}}</p>
+<div *ngIf=" this.id!='' " class="flex items-center gap-2 md:w-1/2  ">
+    <label for="isActive">Activo</label>
+    <input id="isActive" class="w-4 h-4 px-1 outline-none shadow-md focus:outline-3 focus:outline-blue-800 hover:ring-2 hover:ring-blue-500" formControlName="isActive" type="checkbox">
+</div>
+
 <div class="flex  space-x-4 items-center w-full h-16 " >
     <button type="submit" [disabled]="this.form.invalid " [ngClass]="{'hover:ring hover:shadow-none ':this.form.invalid==true}"  
     class=" disabled:opacity-50 py-1  px-1  space-x-1 flex items-center justify-between   hover:shadow-md text-white bg-green-600 rounded-md outline-none hover:ring-2 hover:ring-green-500"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 ">
         <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 14.25h13.5m-13.5 0a3 3 0 0 1-3-3m3 3a3 3 0 1 0 0 6h13.5a3 3 0 1 0 0-6m-16.5-3a3 3 0 0 1 3-3h13.5a3 3 0 0 1 3 3m-19.5 0a4.5 4.5 0 0 1 .9-2.7L5.737 5.1a3.375 3.375 0 0 1 2.7-1.35h7.126c1.062 0 2.062.5 2.7 1.35l2.587 3.45a4.5 4.5 0 0 1 .9 2.7m0 0a3 3 0 0 1-3 3m0 3h.008v.008h-.008v-.008Zm0-6h.008v.008h-.008v-.008Zm-3 6h.008v.008h-.008v-.008Zm0-6h.008v.008h-.008v-.008Z" />
       </svg>
      <span>Guardar</span></button>
-    <a class="flex space-x-1 text-red-700 cursor-pointer hover:text-black "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+    <a (click)="return()" class="flex space-x-1 text-red-700 cursor-pointer hover:text-black "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" />
       </svg>
        <span>Salir</span> </a>
